--- a/redhat/Lintel.spec.in
+++ b/redhat/Lintel.spec.in
@@ -22,20 +22,20 @@ BuildRequires: perl-DBI, perl-DBD-MySQL, libxml2-devel, tetex-latex, tetex-dvips
 %package	libs
 Summary:        Lintel library files
 Group:          Development/Libraries
-Requires:       %{name}-libs = %{version}-%{release}
 License:        BSD
 
 %package	devel
 Summary:        Lintel devel files
 Group:          Development/Libraries
 Requires:       %{name}-libs = %{version}-%{release}
-Requires:       cmake
+Requires:       boost-devel, libxml2-devel
 License:        BSD
 
 %package	utils
 Summary:        Lintel utilities
 Group:          Development/Libraries
-Requires:       %{name}-libs = %{version}-%{release}, %{name}-perl
+Requires:       %{name}-libs = %{version}-%{release}, perl-Lintel, tetex-latex, tetex-dvips
+Requires:       ghostscript
 License:        BSD
 
 # TODO-package-reviewer: how do we make this package architecture independent?
