--- a/debian/control
+++ b/debian/control
@@ -3,10 +3,13 @@ Source: lintel
 # unlikely to install it unless they know what it is.
 Priority: optional
 Maintainer: Eric Anderson <anderse@hpl.hp.com>
-Build-Depends: debhelper (>= 7), cmake, libboost-thread-dev | libboost-thread1.35-dev, 
-  libboost-program-options-dev | libboost-program-options1.35-dev, libboost-dev | libboost1.35-dev,
+Build-Depends: debhelper (>= 7), cmake, 
+  libboost-thread-dev | libboost-thread1.35-dev | libboost-thread1.42-dev, 
+  libboost-program-options-dev | libboost-program-options1.35-dev 
+    | libboost-program-options1.42-dev, 
+  libboost-dev | libboost1.35-dev | libboost1.42-dev,
   gnuplot, netpbm, ssh, sg3-utils, libdata-showtable-perl, libdigest-hmac-perl, libdbi-perl, 
-  libdbd-mysql-perl, libbsd-resource-perl, libxml2-dev, texlive-base-bin, chrpath,
+  libdbd-mysql-perl, libbsd-resource-perl, libxml2-dev, texlive-base-bin|texlive-binaries, chrpath,
   texlive-latex-base, doxygen, ghostscript
 Standards-Version: 3.9.1
 Section: utils
@@ -68,8 +71,10 @@ Section: libdevel
 Architecture: any
 Depends: liblintel0 (= ${binary:Version}), liblintelpthread0 (= ${binary:Version}), 
   ${misc:Depends}, libxml2-dev,
-  libboost-dev | libboost1.35-dev, libboost-program-options-dev | libboost-program-options1.35-dev
-  
+  libboost-dev | libboost1.35-dev | libboost1.42-dev, 
+  libboost-program-options-dev | libboost-program-options1.35-dev 
+    | libboost-program-options1.42-dev,
+  libboost-thread-dev | libboost-thread1.35-dev | libboost-thread1.42-dev
 Recommends: liblintel-dev-doc
 Description: Miscellaneous utility library - development code
  Lintel is the miscellaneous utility library for shared functions that are
