--- a/src/lintel-latex-rebuild.in
+++ b/src/lintel-latex-rebuild.in
@@ -202,7 +202,7 @@ if [ $latex_err = 0 -a $bibtex_err = 0 ]; then
     # Why not run dvipdf?  The current version of dvipdf defaults to A4 paper
     # and doesn't pass options to dvips (the underlying engine for dvipdf).
     # so we call dvips and ps2pdf14 directly.
-    @DVIPS_CONVERTER@ -P pdf -P cmz -P amz -t $PAPER_SIZE -D 600 -Z -G0 -o $TEXFILE.pdftemp $TEXFILE.dvi >>$TEXFILE.rebuild.out 2>&1
+    @DVIPS_CONVERTER@ -P pdf @DVIPS_P_cmz@ @DVIPS_P_amz@ -t $PAPER_SIZE -D 600 -Z -G0 -o $TEXFILE.pdftemp $TEXFILE.dvi >>$TEXFILE.rebuild.out 2>&1
     dvipstemp_err=$?
     # Note both options are needed to force all the fonts to be
     # embedded; file size effect seems to be small in one test case;
