--- a/debian/control
+++ b/debian/control
@@ -3,14 +3,16 @@ Source: lintel
 # unlikely to install it unless they know what it is.
 Priority: optional
 Maintainer: Eric Anderson <anderse@hpl.hp.com>
-Build-Depends: debhelper (>= 7), cmake, 
+# First step are all the ones that have the same package name on ubuntu/debian of all the different
+# versions.  Second set is all the ones with different dependencies on different OS versions
+Build-Depends: debhelper (>= 6), cmake, gnuplot, netpbm, ssh, sg3-utils, libdata-showtable-perl,
+  libdigest-hmac-perl, libdbi-perl, libdbd-mysql-perl, libbsd-resource-perl, libxml2-dev, chrpath,
+  texlive-latex-base, doxygen, ghostscript,
   libboost-thread-dev | libboost-thread1.35-dev | libboost-thread1.42-dev, 
   libboost-program-options-dev | libboost-program-options1.35-dev 
     | libboost-program-options1.42-dev, 
   libboost-dev | libboost1.35-dev | libboost1.42-dev,
-  gnuplot, netpbm, ssh, sg3-utils, libdata-showtable-perl, libdigest-hmac-perl, libdbi-perl, 
-  libdbd-mysql-perl, libbsd-resource-perl, libxml2-dev, texlive-base-bin|texlive-binaries, chrpath,
-  texlive-latex-base, doxygen, ghostscript
+  texlive-base-bin | texlive-binaries
 Standards-Version: 3.9.1
 Section: utils
 Homepage: http://tesla.hpl.hp.com/opensource/
