* Now able to build (using mock) on Centos 5, 5.5, 5.6 and Fedora 13,14
redhat/get-lintel-srpm.sh: script to figure out the right srpm to use when
  building.  Fedora and CentOS have different build dependencies and the
  trick used on debian (patch the .dsc) doesn't work on rpm because the spec
  file is embedded in the srpm.

redhat/make-srpms.sh: script to generate the fedora and centos srpms.

redhat/mock-cfg.pl: Script to generate the necessary mock configuration for both
  fedora and centos that works with the version of mock present on debian lenny.

debian/fix-install.sh: Echo each of the files before running the chrpath -- used
  for debugging, we were missing a perl dependency on fedora, but it was unclear
  until we knew which file wasn't building.

debian/rules:  Can't tell if .PRECIOUS or .SECONDARY is needed, have both of them; the
  latter seemed to be working for redhat/rules.  Factor out the debian mirror and 
  lock it down to kernel.org so that local http caching won't be confused by seeing
  different URLs from different mirrors all the time.

include/Lintel/AtomicCounter.hpp: i386 Centos5 does not support sync_add_and_fetch in the form that
  returns a value -- it gets a link error.  In that case, use our inline assembly variant and just
  assume that everyone has at least a 486 (-m486 is also sufficient to make it work)

redhat/Lintel.spec.in: chrpath was listed twice, add the fedora specific build requirement.
  strip from lib* since i386 doesn't write libraries into lib64

redhat/copy-tar.sh: move rpm topdir detecting into get-version.sh

redhat/get-version.sh: rpm topdir code moved here, also detect the os type here.

redhat/make-tar.sh: patch the spec based on the os type also

redhat/patch-spec.pl: Take an os option also so we can have os specific variants of the spec file.

redhat/rules: Add in all of the rules for generating the package on both centos and fedora.
  Next comes SuSE and Scientific linux 6

--- a/redhat/rules
+++ b/redhat/rules
@@ -7,14 +7,56 @@ help:
 	@echo "redhat/rules repo # copy rpms to yum repo under $$REDHAT_REPO"
 	@echo "redhat/rules clean # clean up temporary files made during above steps"
 
+.SECONDARY:
+
+# Should we build against vault.centos.org for the older versions?  CentOS changes various things
+# so that it's not clear you can install an RPM built against 5.6 on 5.4.
+# See also: http://www.centos.org/modules/smartfaq/faq.php?faqid=34
+CENTOS_VERSIONS := 5 5.5 5.6
+
+MOCK_CENTOS := $(foreach version, $(CENTOS_VERSIONS), $(foreach arch, x86_64 i386, \
+		    redhat/stamp/mock/centos-$(version)-$(arch)))
+
+FEDORA_VERSIONS := 13 14
+
+MOCK_FEDORA := $(foreach version, $(FEDORA_VERSIONS), $(foreach arch, x86_64 i386, \
+		    redhat/stamp/mock/fedora-$(version)-$(arch)))
+
+mock: mock-centos mock-fedora
+
+mock-centos: $(MOCK_CENTOS)
+
+mock-fedora: $(MOCK_FEDORA)
+
+redhat/stamp/mock/%: /var/cache/mock/lintel-%/root_cache/cache.tar.gz /etc/mock/lintel-%.cfg redhat/stamp/srpm
+	[ `whoami` = root ]
+	mock --rebuild --cleanup-after --resultdir=/var/lib/mock/result/$* \
+	    -r lintel-$* `redhat/get-lintel-srpm.sh $*`
+	mkdir -p `dirname $@`
+	touch $@
+
+/var/cache/mock/%/root_cache/cache.tar.gz: /etc/mock/%.cfg
+	[ `whoami` = root ]
+	[ ! -z "$$http_proxy" ]
+	ls -l /etc/mock/$*.cfg
+	sudo mock --init -r $*
+
+/etc/mock/lintel-%.cfg: 
+	[ `whoami` = root ]
+	./redhat/mock-cfg.pl $*
+	echo "made $@"
+
 tar: redhat/stamp/tar
 
 copy-tar: redhat/stamp/copy-tar
 
 rpm: redhat/stamp/rpm
 
-srpm: redhat/stamp/copy-tar
-	rpmbuild -bs redhat/Lintel.spec
+srpm: redhat/stamp/srpm
+
+redhat/stamp/srpm:
+	/bin/sh redhat/make-srpms.sh
+	touch $@
 
 repo: redhat/stamp/repo
 
