--- a/debian/rules
+++ b/debian/rules
@@ -24,6 +24,7 @@ PBUILDER_UBUNTU := $(foreach dist, $(UBUNTU_VERSIONS), \
 		       $(foreach arch, amd64 i386, debian/stamp/pbuilder/ubuntu-$(dist)-$(arch)))
 
 .PRECIOUS: %.tgz
+.SECONDARY:
 
 tars: tars-debian tars-ubuntu
 
@@ -49,11 +50,12 @@ debian/stamp/pbuilder/%: /var/cache/pbuilder/%.tgz
 	mkdir -p debian/stamp/pbuilder
 	touch $@
 
+DMIRROR=http://mirrors2.kernel.org/debian
 /var/cache/pbuilder/debian-%.tgz:
 	touch /var/cache/pbuilder
 	pbuilder --create --basetgz $@-new --distribution `echo $* | sed 's/-.*//'` \
 	    --debootstrapopts --arch=`echo $* | sed 's/.*-//'` \
-	    --mirror http://http.us.debian.org/debian
+	    --mirror $(DMIRROR)
 	mv $@-new $@
 
 UMIRROR=http://mirrors2.kernel.org/ubuntu/
