--- a/redhat/Lintel.spec.in
+++ b/redhat/Lintel.spec.in
@@ -15,8 +15,9 @@ BuildRoot:      %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 # special extra packages on CentOS5, from EPEL or elsewhere
 BuildRequires: cmake, chrpath
 # Standard packages
-BuildRequires: boost-devel, chrpath, doxygen, sg3_utils, gnuplot, netpbm-progs, openssh-clients
+BuildRequires: boost-devel, doxygen, sg3_utils, gnuplot, netpbm-progs, openssh-clients
 BuildRequires: perl-DBI, perl-DBD-MySQL, libxml2-devel, tetex-latex, tetex-dvips, ghostscript
+#patch-spec-if fedora BuildRequires: perl-devel
 
 # TODO-package-reviewer: do we split shared libraries as in debian?
 %package	libs
@@ -118,7 +119,7 @@ cat >$RPM_BUILD_ROOT/usr/share/doc/Lintel-utils/README <<EOF
 __DESCRIPTION_lintel-utils__
 EOF
 
-strip $RPM_BUILD_ROOT/usr/lib64/libLintel*.so.*.*
+strip $RPM_BUILD_ROOT/usr/lib*/libLintel*.so.*.*
 
 %post libs -p /sbin/ldconfig
 
