43/AC03: fixed bug in ASCIIbeticalB64
include/Lintel/Base64.hpp
  - fixed bug. changed encoded to decode.

src/tests/base64.cpp
  - added a basic unit test

src/tests/CMakeLists.txt
  - added compilation of new file

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -41,6 +41,7 @@ LINTEL_SIMPLE_TEST(priority_queue)
 LINTEL_SIMPLE_TEST(byte_buffer)
 LINTEL_SIMPLE_TEST(boyer_moore_horspool)
 LINTEL_SIMPLE_TEST(stlutility)
+LINTEL_SIMPLE_TEST(base64)
 
 ################################## SPECIAL TEST PROGRAMS
 
