* Package building on opensuse is now partially working -- tested with 11.4 x86_64 and i586
opensuse-build.sh: script to make the chroot, populate it with packages and run the
  opensuse-chroot script in the chroot

opensuse-chroot.sh: script to actually build the rpm after fixing the databases

CMakeConfig.txt: Add note about something we could try to add to the compile flags to
  make lintian happier about our linking.

debian/rules: remove the -j 6 and the todo

Lintel.spec.in: lots of custom bits for the build requires on various OSs

make-srpms.sh: Add opensuse to the list of custom srpms that we make

patch-spec.pl: Shorten the code for per-os patching

redhat/rules: List currently supported opensuse versions, add command to do a build
  on opensuse, fix a missing mkdir -p that could cause srpm target to fail

--- a/debian/rules
+++ b/debian/rules
@@ -79,8 +79,7 @@ build: build-stamp
 build-stamp:  debian/build/config-stamp
 	dh_testdir
 
-	# TODO: remove the -j6, also run tests.
-	(cd debian/build && $(MAKE) -j 6)
+	(cd debian/build && $(MAKE))
 	(cd debian/build && ctest)
 
 	touch $@
