--- a/redhat/Lintel.spec.in
+++ b/redhat/Lintel.spec.in
@@ -15,9 +15,17 @@ BuildRoot:      %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 # special extra packages on CentOS5, from EPEL or elsewhere
 BuildRequires: cmake, chrpath
 # Standard packages
-BuildRequires: boost-devel, doxygen, sg3_utils, gnuplot, netpbm-progs, openssh-clients
-BuildRequires: perl-DBI, perl-DBD-MySQL, libxml2-devel, tetex-latex, tetex-dvips, ghostscript
-#patch-spec-if fedora BuildRequires: perl-devel
+BuildRequires: boost-devel, doxygen, sg3_utils, gnuplot, perl-DBI, libxml2-devel
+# see patch-spec.pl
+
+#if-fedora BuildRequires: perl-devel, netpbm-progs, openssh-clients, 
+#if-fedora BuildRequires: perl-DBD-MySQL, tetex-latex, tetex-dvips, ghostscript
+
+#if-centos BuildRequires: netpbm-progs, openssh-clients, perl-DBD-MySQL, 
+#if-centos BuildRequires: tetex-latex, tetex-dvips, ghostscript
+
+#if-opensuse BuildRequires: netpbm, openssh, perl-DBD-mysql, ghostscript-library, texlive-latex
+#if-opensuse BuildRequires: perl-Data-ShowTable, perl-Digest-HMAC, perl-BSD-Resource
 
 # TODO-package-reviewer: do we split shared libraries as in debian?
 %package	libs
