--- a/redhat/rules
+++ b/redhat/rules
@@ -22,6 +22,13 @@ FEDORA_VERSIONS := 13 14
 MOCK_FEDORA := $(foreach version, $(FEDORA_VERSIONS), $(foreach arch, x86_64 i386, \
 		    redhat/stamp/mock/fedora-$(version)-$(arch)))
 
+# Supported releases: http://en.wikipedia.org/wiki/OpenSUSE
+OPENSUSE_VERSIONS := 11.2 11.3 11.4
+
+opensuse: 
+	# sudo ./redhat/opensuse-build.sh opensuse-11.4-x86_64
+	sudo ./redhat/opensuse-build.sh opensuse-11.4-i586
+
 mock: mock-centos mock-fedora
 
 mock-centos: $(MOCK_CENTOS)
@@ -56,6 +63,7 @@ srpm: redhat/stamp/srpm
 
 redhat/stamp/srpm:
 	/bin/sh redhat/make-srpms.sh
+	mkdir -p `dirname $@`
 	touch $@
 
 repo: redhat/stamp/repo
