* Now able to build on both openSUSE (11.[234]) and scientific linux 6.0
CMakeConfig.txt: add check for Time::HiRes module scientific linux doesn't have
  it by default.

Lintel.spec.in: Add new buildrequires for scilinux; remove debugging ls.

make-srpms.sh: Make scilinux srpm

mock-cfg.pl: Mock config for scilinux

opensuse-build.sh: Switchover how we execute the build command; we need to call
  linux32 to make the chroot build correctly.  Also add dependencies for rebuilding
  the rpm dbs.  I was unable to get osc (the suse build tool) to do local rebuilds.

opensuse-chroot.sh: Code to build the package in the chroot, works on all three
  supported versions of opensuse.

rules: Add help for the all-rpms target. Add target for building all of the opensuse versions.  Add
  pattern for building each opensuse version.  Add target for building the scilinux versions.
  Debugging echo of http_proxy.  Change around dependencies depending on directory causes
  fake rebuilds since the directory mtime changes when files are created within it.

src/CMakeLists.txt: Only install processmanager and deptool{,-bootstrap} if Time::HiRes is enabled.

src/tests/CMakeLists.txt: Only test deptool if Time::HiRes is enabled.

test-lintel-processmanager.pl: hack to work around openSUSE 11.2 bug that does not properly 
  return core-dump status in perl.

--- a/redhat/Lintel.spec.in
+++ b/redhat/Lintel.spec.in
@@ -27,6 +27,9 @@ BuildRequires: boost-devel, doxygen, sg3_utils, gnuplot, perl-DBI, libxml2-devel
 #if-opensuse BuildRequires: netpbm, openssh, perl-DBD-mysql, ghostscript-library, texlive-latex
 #if-opensuse BuildRequires: perl-Data-ShowTable, perl-Digest-HMAC, perl-BSD-Resource
 
+#if-scilinux BuildRequires: perl-devel, netpbm-progs, openssh-clients, perl-Time-HiRes
+#if-scilinux BuildRequires: perl-DBD-MySQL, tetex-latex, tetex-dvips, ghostscript
+
 # TODO-package-reviewer: do we split shared libraries as in debian?
 %package	libs
 Summary:        Lintel library files
@@ -101,7 +104,6 @@ cd rpm-build
 rm -rf $RPM_BUILD_ROOT
 make install DESTDIR=$RPM_BUILD_ROOT
 pwd
-ls ..
 ../debian/fix-install.sh $RPM_BUILD_ROOT
 mkdir -p $RPM_BUILD_ROOT%{_docdir}/Lintel-%{version}
 cp ../Release.info ../Changelog.mtn ../COPYING $RPM_BUILD_ROOT%{_docdir}/Lintel-%{version}
