--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -78,7 +78,6 @@ IF(PERL_ENABLED)
     LINTEL_INSTALL_FILE_PATH(${CMAKE_INSTALL_PREFIX}/share/perl5
     	Text/Expand.pm
     	Lintel/File/Lock.pm
-	Lintel/ProcessManager.pm
     )
 
     IF(PERL_DIGEST_HMAC_ENABLED AND SSH_ENABLED)
@@ -87,6 +86,11 @@ IF(PERL_ENABLED)
         )
     ENDIF(PERL_DIGEST_HMAC_ENABLED AND SSH_ENABLED)
 
+    IF(PERL_TIME_HIRES_ENABLED)
+        LINTEL_INSTALL_FILE_PATH(${CMAKE_INSTALL_PREFIX}/share/perl5
+  	    Lintel/ProcessManager.pm
+        )
+    ENDIF(PERL_TIME_HIRES_ENABLED)
 ENDIF(PERL_ENABLED)
 
 IF(LINTEL_DBI_ENABLED)
@@ -134,12 +138,6 @@ IF(PERL_ENABLED)
     LIST(APPEND LINTEL_FEATURES perl)
 ENDIF(PERL_ENABLED)
 
-# Built, but intentionally not installed.
-ADD_CUSTOM_TARGET(deptool-bootstrap ALL 
-                  COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/make-deptool-bootstrap.sh
-		          ${CMAKE_CURRENT_SOURCE_DIR} 
-		  DEPENDS deptool.in Lintel/File/Lock.pm Lintel/ProcessManager.pm)
-
 ################################## LIBRARY
 
 ADD_LIBRARY(Lintel ${LIBRARY_TYPE} ${LIBLINTEL_SOURCES})
@@ -184,9 +182,17 @@ LINTEL_INSTALL_CONFIG_POD2MAN_PROGRAM(lintel-config 1 "Lintel ${LINTEL_VERSION}"
 
 IF(PERL_ENABLED) 
     LINTEL_INSTALL_CONFIG_POD2MAN_PROGRAM(batch-parallel 1 "Lintel ${LINTEL_VERSION}")
-    LINTEL_INSTALL_CONFIG_POD2MAN_PROGRAM(deptool 1 "Lintel ${LINTEL_VERSION}")
     LINTEL_INSTALL_CONFIG_POD2MAN_PROGRAM(lintel-flock 1 "Lintel ${LINTEL_VERSION}")
 ENDIF(PERL_ENABLED) 
+
+IF(PERL_ENABLED AND PERL_TIME_HIRES_ENABLED) 
+    LINTEL_INSTALL_CONFIG_POD2MAN_PROGRAM(deptool 1 "Lintel ${LINTEL_VERSION}")
+    # Built, but intentionally not installed.
+    ADD_CUSTOM_TARGET(deptool-bootstrap ALL 
+                      COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/make-deptool-bootstrap.sh
+    		          ${CMAKE_CURRENT_SOURCE_DIR} 
+    		      DEPENDS deptool.in Lintel/File/Lock.pm Lintel/ProcessManager.pm)
+ENDIF(PERL_ENABLED AND PERL_TIME_HIRES_ENABLED) 
 
 IF(PERL_ENABLED AND SFDISK_ENABLED AND SGINFO_ENABLED)
     LINTEL_INSTALL_CONFIG_POD2MAN_PROGRAM(lintel-disktool 1 "Lintel ${LINTEL_VERSION}")
