* Updates to get building to work on current wheezy and with the   debian/ubuntu packages for DataSeries
localpkgs: Script to generate the local packages release configuration

debian/pkg-targets.mk: Separate out the code for generating packages so
  that it can be re-used in the DataSeries package generation.  A few notes
  at the top about what needs to appear in the include file.  Also add in
  the code to generate the repository.

CMakeConfig.txt: Remove comment, we're now doing the --as-needed thing to 
  remove unneeded libraries.

cmake-modules/FindLintel.cmake: Add extra libraries for likely required dependencies.

debian/control: Add in V1.38 of the boost libraries to get builds to work on
  some variant of ubuntu.

debian/rules: remove most of the package building code.  Enable parallelism
  for the pbuilder build.  Remove the comment about unnecessary links.  Add
  new needed depedency for package building code.

src/CMakeLists.txt: Add the --as-needed flags for link flags

--- a/debian/control
+++ b/debian/control
@@ -8,10 +8,11 @@ Maintainer: Eric Anderson <anderse@hpl.hp.com>
 Build-Depends: debhelper (>= 6), cmake, gnuplot, netpbm, ssh, sg3-utils, libdata-showtable-perl,
   libdigest-hmac-perl, libdbi-perl, libdbd-mysql-perl, libbsd-resource-perl, libxml2-dev, chrpath,
   texlive-latex-base, doxygen, ghostscript,
-  libboost-thread-dev | libboost-thread1.35-dev | libboost-thread1.42-dev, 
+  libboost-thread-dev | libboost-thread1.35-dev | libboost-thread1.38-dev
+    | libboost-thread1.42-dev, 
   libboost-program-options-dev | libboost-program-options1.35-dev 
-    | libboost-program-options1.42-dev, 
-  libboost-dev | libboost1.35-dev | libboost1.42-dev,
+    | libboost-program-options1.38-dev | libboost-program-options1.42-dev, 
+  libboost-dev | libboost1.35-dev | libboost1.38-dev | libboost1.42-dev,
   texlive-base-bin | texlive-binaries
 Standards-Version: 3.9.1
 Section: utils
