* Updates so that we can build packages for both lintel and dataseries   on all the supported platforms.
get-srpm.sh: rename so the name is consistent between packages.
  Also add usage bits.

make-srpms.sh: move into dist since I'm redoing the balance of work between
  {redhat,debian}/rules and the new dist/rules.  Fix so that it takes a 
  parameter to identify the starting package.

dist/rules: New makefile for building all of the packages for distribution.
  Moves the stamp files out of Lintel/DataSeries so they conflict less.
  Eventually all of the multi-platform building code should go here, currently
  some is still in the package specific rules files.

debian/rules: switch pbuilder target to not make a stamp. 

pkg-targets.mk: Remove some of the version code; eventually this will all go
  away since it will go into dist.

Lintel.spec.in: Conditional dependencies for utils package so it is installable
  on all the platforms.

mock-cfg.pl: Remove commented out bits, add in new local group to cover the
  locally built packages.  Add back in exclusion for scilinux on i386.

opensuse-build.sh: Move code to get srpm. Add env var for lockfile so we can
  run zypper in parallel.  Generalize the spec selection code so that it just
  takes whichever one is installed.   Fix a few other bits so that they work
  when this script is run in the DataSeries directory.

opensuse-chroot.sh: Generalize so that the build will happen on whatever spec file
  is present.

rules: Remove all the version stuff, change the chroot and mock targets to not
   make stamp files.  Update to use get-srpm.sh

--- a/debian/rules
+++ b/debian/rules
@@ -23,15 +23,13 @@ VERSION := $(shell perl -ne '/\w+\s+\(([0-9\.]+)\) /o || die "bad $$_"; print "$
 PARALLELISM=6
 include debian/pkg-targets.mk
 
-debian/stamp/pbuilder/%: /var/cache/pbuilder/%.tgz
+pbuilder-%: /var/cache/pbuilder/%.tgz
 	[ -f ../lintel_$(VERSION).dsc ]
 	touch /var/cache/pbuilder
 	perl debian/fixup-dsc.pl $* < ../lintel_$(VERSION).dsc >../lintel_$(VERSION)-$*.dsc
 	pbuilder --build --basetgz /var/cache/pbuilder/$*.tgz --debbuildopts "-j$(PARALLELISM)" \
 	    --buildresult /var/cache/pbuilder/result/$* ../lintel_$(VERSION)-$*.dsc
 	rm ../lintel_$(VERSION)-$*.dsc
-	mkdir -p debian/stamp/pbuilder
-	touch $@
 
 debian/build/config-stamp: 
 	dh_testdir
