--- a/redhat/rules
+++ b/redhat/rules
@@ -11,75 +11,32 @@ help:
 
 .SECONDARY:
 
-# Should we build against vault.centos.org for the older versions?  CentOS changes various things
-# so that it's not clear you can install an RPM built against 5.6 on 5.4.
-# See also: http://www.centos.org/modules/smartfaq/faq.php?faqid=34
-CENTOS_VERSIONS := 5 5.5 5.6
-
-MOCK_CENTOS := $(foreach version, $(CENTOS_VERSIONS), $(foreach arch, x86_64 i386, \
-		    redhat/stamp/mock/centos-$(version)-$(arch)))
-
-FEDORA_VERSIONS := 13 14
-
-MOCK_FEDORA := $(foreach version, $(FEDORA_VERSIONS), $(foreach arch, x86_64 i386, \
-		    redhat/stamp/mock/fedora-$(version)-$(arch)))
-
-# Supported releases: http://en.wikipedia.org/wiki/OpenSUSE
-OPENSUSE_VERSIONS := 11.2 11.3 11.4
-CHROOT_OPENSUSE := $(foreach version, $(OPENSUSE_VERSIONS), $(foreach arch, x86_64 i586, \
-			redhat/stamp/chroot/opensuse-$(version)-$(arch)))
-
-SCILINUX_VERSIONS := 6.0
-MOCK_SCILINUX := $(foreach version, $(SCILINUX_VERSIONS), $(foreach arch, x86_64 i386, \
-		      redhat/stamp/mock/scilinux-$(version)-$(arch)))
-
-
-all-rpms: mock-centos mock-fedora chroot-opensuse mock-scilinux
-
-mock-centos: $(MOCK_CENTOS)
-
-mock-fedora: $(MOCK_FEDORA)
-
-chroot-opensuse: $(CHROOT_OPENSUSE)
-
-mock-scilinux: $(MOCK_SCILINUX)
-
-redhat/stamp/mock/%: /var/cache/mock/lintel-%/root_cache/cache.tar.gz /etc/mock/lintel-%.cfg redhat/stamp/srpm
+mock-%: /var/cache/mock/lintel-%/root_cache/cache.tar.gz /etc/mock/lintel-%.cfg
 	[ `whoami` = root ]
 	mock --rebuild --cleanup-after --resultdir=/var/lib/mock/result/$* \
-	    -r lintel-$* `redhat/get-lintel-srpm.sh $*`
-	mkdir -p `dirname $@`
-	touch $@
+	    -r lintel-$* `redhat/get-srpm.sh $*`
 
 /var/cache/mock/%/root_cache/cache.tar.gz: /etc/mock/%.cfg
 	[ `whoami` = root ]
 	[ ! -z "$$http_proxy" ]
 	echo $$http_proxy
 	ls -l /etc/mock/$*.cfg
-	sudo mock --init -r $*
+	mock --init -r $*
 
 /etc/mock/lintel-%.cfg: 
 	[ `whoami` = root ]
 	./redhat/mock-cfg.pl $*
 	echo "made $@"
 
-redhat/stamp/chroot/%: 
-	sudo ./redhat/opensuse-build.sh $*
-	mkdir -p `dirname $@`
-	touch $@
+chroot-%: 
+	[ `whoami` = root ]
+	./redhat/opensuse-build.sh $*
 
 tar: redhat/stamp/tar
 
 copy-tar: redhat/stamp/copy-tar
 
 rpm: redhat/stamp/rpm
-
-srpm: redhat/stamp/srpm
-
-redhat/stamp/srpm: redhat/stamp/copy-tar
-	/bin/sh redhat/make-srpms.sh
-	mkdir -p `dirname $@`
-	touch $@
 
 repo: redhat/stamp/repo
 
