* Repository building on martenot works now.
redhat/copy-tar.sh: simplify and move to just make-tar doing the work
  in this file as well.

dist/make-release-changelog.sh: factor out the code that makes the release.info
  and changelog.mtn files; they were being generated in several slightly different
  ways.

redhat/make-spec.sh: factor out the code that makes the local spec file so we can
  not do that when making the distribution rpms.

debian/liblintel-dev-doc.install: install the release.info and changelog.mtn files

debian/rules: Add install steps for release/changelog

dist/checkout.sh: Use standard release/changelog code

dist/make-srpms.sh: Write temporary spec files into /tmp so to get clean tarballs.

dist/martenot-copy: Fix script to do the copy to martenot, and then the source/binary
  work on martenot.  Error out on the binary-diff code, it doesn't work.

dist/mock-cfg.pl: Error out if a bad argument is provided.

dist/rules: Build on centos 5 and 5.6, scilinux 6, 6.0.  Move some of the now commonly used
  variables up to the top.  Update comment on gpg-agent.  Enable the code to do the martenot
  copy.  Add some additional directories/files that need to be cleaned.  Add targets for rebuilding
  all the various source packages and for caching the download packages for everything but
  opensuse.  Factor out the code for generating release/changelog so that dependencies can
  make sure parallel builds work correctly.  Add cleaner target for mock caching.   Exclude the
  _MTN directory when building debian sources.

redhat/make-tar.sh: Use common release/changelog code; remove spec making code.  Exclude the
  _MTN when building the tarball.

redhat/patch-spec.pl: Refactor to write to stdout so caller can redirect.

redhat/rules: Remove copy-tar rule and add spec rule.  Document rationale (spec separate so
  it won't normally end up in tarball)

--- a/redhat/rules
+++ b/redhat/rules
@@ -2,7 +2,6 @@
 
 help:
 	@echo "redhat/rules tar # make ../Lintel-<version>.tar.gz"
-	@echo "redhat/rules copy-tar # copy ../Lintel-<version>.tar.gz to rpm_topdir"
 	@echo "redhat/rules rpm # build rpms"
 	@echo "redhat/rules repo # copy rpms to yum repo under $$REDHAT_REPO"
 	@echo "redhat/rules clean # clean up temporary files made during above steps"
@@ -13,26 +12,28 @@ help:
 
 tar: redhat/stamp/tar
 
-copy-tar: redhat/stamp/copy-tar
-
 rpm: redhat/stamp/rpm
+
+spec: redhat/stamp/spec
 
 repo: redhat/stamp/repo
 
 clean:
 	-if [ -d _MTN ]; then rm Release.info Changelog.mtn; fi
-	-. redhat/get-version.sh && rm ../Lintel-$$VERSION.tar.gz
+	-. redhat/get-version.sh; rm ../Lintel-$$VERSION.tar.gz
 	rm -rf redhat/stamp
-	rm redhat/Lintel.spec
+	[ ! -f redhat/Lintel.spec ] || rm redhat/Lintel.spec
 
 redhat/stamp/tar: 
+	[ ! -f redhat/Lintel.spec ] || rm redhat/Lintel.spec
 	./redhat/make-tar.sh
 	mkdir -p `dirname $@`
 	touch $@
 
-redhat/stamp/copy-tar: redhat/stamp/tar
-	./redhat/copy-tar.sh
+# separate from tar so that we don't get the spec file in the tarball
+redhat/stamp/spec: redhat/stamp/tar
+	./redhat/make-spec.sh
 	touch $@
 
-redhat/stamp/rpm: redhat/stamp/copy-tar
+redhat/stamp/rpm: redhat/stamp/spec
 	rpmbuild -ba redhat/Lintel.spec
