--- a/redhat/Lintel.spec.in
+++ b/redhat/Lintel.spec.in
@@ -186,6 +186,9 @@ rm -rf $RPM_BUILD_ROOT rpm-build
 
 %changelog
 
+* Tue Jun 07 2011 anderse@hpl.hp.com 0.2011.06.07-1
+- Release.  See NEWS for major changes.
+
 * Fri Mar 25 2011 anderse@hpl.hp.com 0.2011.03.12-1
 - Initial rpm packaging.
 
